--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Afspilningsliste
 SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Songs
 PLAYLIST_CATTEXT=Playlist: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Legende
-SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Duet
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Syng Solo
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Joker
 
 SONG_MENU_NAME_PARTY_JOKER=Brug Jokeren
 
-SONG_JUMPTO_DESC=Søg Sang
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Legende
+SONG_MENU_LEGEND_VIDEO=Video
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Duet
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Fest modus
 PARTY_DIFFICULTY=Sværhedsgrad
