--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Songs
 PLAYLIST_CATTEXT=Playlist: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Legend
-SING_SONG_SELECTION_LEGEND_VIDEO=Video
-SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Duet
-SING_SONG_SELECTION_LEGEND_RAP=Rap
-SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Sing solo
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Joker
 
 SONG_MENU_NAME_PARTY_JOKER=Take joker
 
-SONG_JUMPTO_DESC=Search song
-SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Legend
+SONG_MENU_LEGEND_VIDEO=Video
+SONG_MENU_LEGEND_MEDLEY=Medley
+SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Duet
+SONG_MENU_LEGEND_RAP=Rap
+SONG_MENU_LEGEND_CREATEDBY=Created by
+SONG_MENU_LEGEND_FIXEDBY=Fixed by
+SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Party mode
 PARTY_DIFFICULTY=Difficulty
