--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Lista
 SING_SONG_IN_CAT=canción
 SING_SONGS_IN_CAT=canciones
 PLAYLIST_CATTEXT=Lista: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Leyenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Video
-SING_SONG_SELECTION_LEGEND_MEDLEY=Versión corta
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Versión corta calculada
-SING_SONG_SELECTION_LEGEND_DUET=Dueto
-SING_SONG_SELECTION_LEGEND_RAP=Rap
-SING_SONG_SELECTION_LEGEND_CREATEDBY=Creada por
-SING_SONG_SELECTION_LEGEND_FIXEDBY=Reparada por
-SING_SONG_SELECTION_LEGEND_INVALIDATED=No validada
 
 SING_TOTAL=Total
 SING_MODE=Canta solo o acompañado
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Gastar comodín
 
 SONG_MENU_NAME_PARTY_JOKER=Gastar comodín
 
-SONG_JUMPTO_DESC=Buscar canción
-SONG_JUMPTO_TYPE_DESC=¿Qué quieres cantar ahora?
+SONG_MENU_LEGEND_TITLE=Leyenda
+SONG_MENU_LEGEND_VIDEO=Video
+SONG_MENU_LEGEND_MEDLEY=Versión corta
+SONG_MENU_LEGEND_MEDLEYC=Versión corta calculada
+SONG_MENU_LEGEND_DUET=Dueto
+SONG_MENU_LEGEND_RAP=Rap
+SONG_MENU_LEGEND_CREATEDBY=Creada por
+SONG_MENU_LEGEND_FIXEDBY=Reparada por
+SONG_MENU_LEGEND_UNVALIDATED=No validada
+
+SONG_SEARCH_DESC=¿Qué quieres cantar ahora?
 
 PARTY_MODE=Modo fiesta
 PARTY_DIFFICULTY=Dificultad
