--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Zerrenda
 ;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Abestiak
 PLAYLIST_CATTEXT=Zerrenda: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Guztira
 SING_MODE=Bakarka abestu
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Komodina
 
 SONG_MENU_NAME_PARTY_JOKER=Komodina erabili
 
-SONG_JUMPTO_DESC=Bilatu
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+;TODO: SONG_MENU_LEGEND_TITLE=Legend
+;TODO: SONG_MENU_LEGEND_VIDEO=Video
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+;TODO: SONG_MENU_LEGEND_DUET=Duet
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Taldean Abestu
 PARTY_DIFFICULTY=Zailtasuna
