--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONG_IN_CAT=Chanson
 SING_SONGS_IN_CAT=Chansons
 PLAYLIST_CATTEXT=Playlist: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Légende
-SING_SONG_SELECTION_LEGEND_VIDEO=Vidéo
-SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculé
-SING_SONG_SELECTION_LEGEND_DUET=Duo
-SING_SONG_SELECTION_LEGEND_RAP=Rap
-SING_SONG_SELECTION_LEGEND_CREATEDBY=Créée par
-SING_SONG_SELECTION_LEGEND_FIXEDBY=Réparée par
-SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidée
 
 SING_TOTAL=Total
 SING_MODE=Mode chanter
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Joker
 
 SONG_MENU_NAME_PARTY_JOKER=Utiliser Joker
 
-SONG_JUMPTO_DESC=Rechercher
-SONG_JUMPTO_TYPE_DESC=Que voulez-vous chanter maintenant?
+SONG_MENU_LEGEND_TITLE=Légende
+SONG_MENU_LEGEND_VIDEO=Vidéo
+SONG_MENU_LEGEND_MEDLEY=Medley
+SONG_MENU_LEGEND_MEDLEYC=Medley calculé
+SONG_MENU_LEGEND_DUET=Duo
+SONG_MENU_LEGEND_RAP=Rap
+SONG_MENU_LEGEND_CREATEDBY=Créée par
+SONG_MENU_LEGEND_FIXEDBY=Réparée par
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+SONG_SEARCH_DESC=Que voulez-vous chanter maintenant?
 
 PARTY_MODE=Mode fête
 PARTY_DIFFICULTY=Difficulté
