--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Listaxe
 SING_SONG_IN_CAT=Canción
 SING_SONGS_IN_CAT=Cancións
 PLAYLIST_CATTEXT=Listaxe: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Lenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Vídeo
-SING_SONG_SELECTION_LEGEND_MEDLEY=Versión curta
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Versión curta calculada
-SING_SONG_SELECTION_LEGEND_DUET=Dueto
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Só
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Aleatorio
 
 SONG_MENU_NAME_PARTY_JOKER=Aleatorio
 
-SONG_JUMPTO_DESC=Procurar canción
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Lenda
+SONG_MENU_LEGEND_VIDEO=Vídeo
+SONG_MENU_LEGEND_MEDLEY=Versión curta
+SONG_MENU_LEGEND_MEDLEYC=Versión curta calculada
+SONG_MENU_LEGEND_DUET=Dueto
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Modo festa
 PARTY_DIFFICULTY=Dificultade
