--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Liosta-chluich
 SING_SONG_IN_CAT=Òran
 SING_SONGS_IN_CAT=Òrain
 PLAYLIST_CATTEXT=Liosta-chluich: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Sgeulachd
-SING_SONG_SELECTION_LEGEND_VIDEO=Bhidio
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Duet
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Iomlan
 SING_MODE=Seinn ’nad aonar
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Amadan
 
 SONG_MENU_NAME_PARTY_JOKER=Cleachd amadan
 
-SONG_JUMPTO_DESC=Lorg òran
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Sgeulachd
+SONG_MENU_LEGEND_VIDEO=Bhidio
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Duet
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Modh cèilidh
 PARTY_DIFFICULTY=Duilgheadas
