--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 ;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Canzone
 PLAYLIST_CATTEXT=Playlist: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Leggenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Video
-SING_SONG_SELECTION_LEGEND_MEDLEY=Versione breve
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Versione breve calcolata
-SING_SONG_SELECTION_LEGEND_DUET=Duetto
-SING_SONG_SELECTION_LEGEND_RAP=Rap
-SING_SONG_SELECTION_LEGEND_CREATEDBY=Creata da
-SING_SONG_SELECTION_LEGEND_FIXEDBY=Riparata da
-SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidata
 
 SING_TOTAL=Punteggio
 SING_MODE=Canta
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Jolly
 
 SONG_MENU_NAME_PARTY_JOKER=Gioca il jolly
 
-SONG_JUMPTO_DESC=Cerca Canzone
-SONG_JUMPTO_TYPE_DESC=Cosa vuoi cantare adesso?
+SONG_MENU_LEGEND_TITLE=Leggenda
+SONG_MENU_LEGEND_VIDEO=Video
+SONG_MENU_LEGEND_MEDLEY=Versione breve
+SONG_MENU_LEGEND_MEDLEYC=Versione breve calcolata
+SONG_MENU_LEGEND_DUET=Duetto
+SONG_MENU_LEGEND_RAP=Rap
+SONG_MENU_LEGEND_CREATEDBY=Creata da
+SONG_MENU_LEGEND_FIXEDBY=Riparata da
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+SONG_SEARCH_DESC=Cosa vuoi cantare adesso?
 
 PARTY_MODE=Modalità party
 PARTY_DIFFICULTY=Difficoltà
