--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Számlista
 SING_SONG_IN_CAT=Dal
 SING_SONGS_IN_CAT=Dalok
 PLAYLIST_CATTEXT=Számlista: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Jelmagyarázat
-SING_SONG_SELECTION_LEGEND_VIDEO=Videó
-SING_SONG_SELECTION_LEGEND_MEDLEY=Egyveleg
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Egyveleg kiszámolva
-SING_SONG_SELECTION_LEGEND_DUET=Duett
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Összesen
 SING_MODE=Egyszeri játékos
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Joker
 
 SONG_MENU_NAME_PARTY_JOKER=Joker felhasználása
 
-SONG_JUMPTO_DESC=Dal keresés
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Jelmagyarázat
+SONG_MENU_LEGEND_VIDEO=Videó
+SONG_MENU_LEGEND_MEDLEY=Egyveleg
+SONG_MENU_LEGEND_MEDLEYC=Egyveleg kiszámolva
+SONG_MENU_LEGEND_DUET=Duett
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Buli mód
 PARTY_DIFFICULTY=Nehézségi Szint
