--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONG_IN_CAT=Cançao
 SING_SONGS_IN_CAT=Canções
 PLAYLIST_CATTEXT=Playlist: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Lenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Vídeo
-SING_SONG_SELECTION_LEGEND_MEDLEY=Versão curta
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Versão curta calculada
-SING_SONG_SELECTION_LEGEND_DUET=Dueto
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Cantar Solo
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Joker
 
 SONG_MENU_NAME_PARTY_JOKER=Usar Joker
 
-SONG_JUMPTO_DESC=Procurar
-SONG_JUMPTO_TYPE_DESC=O que queres cantar agora?
+SONG_MENU_LEGEND_TITLE=Lenda
+SONG_MENU_LEGEND_VIDEO=Vídeo
+SONG_MENU_LEGEND_MEDLEY=Versão curta
+SONG_MENU_LEGEND_MEDLEYC=Versão curta calculada
+SONG_MENU_LEGEND_DUET=Dueto
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+SONG_SEARCH_DESC=O que queres cantar agora?
 
 PARTY_MODE=Modo Festa
 PARTY_DIFFICULTY=Dificuldade
