--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=плэйлист
 SING_SONG_IN_CAT=песня
 SING_SONGS_IN_CAT=Песни
 PLAYLIST_CATTEXT=Плэйлист: %s
-SING_SONG_SELECTION_LEGEND_TITLE=легенда
-SING_SONG_SELECTION_LEGEND_VIDEO=видео
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Дуэт
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=всего
 SING_MODE=пение соло
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Джокер
 
 SONG_MENU_NAME_PARTY_JOKER=взять джокер
 
-SONG_JUMPTO_DESC=поиск песни
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=легенда
+SONG_MENU_LEGEND_VIDEO=видео
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Дуэт
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=режим вечеринки
 PARTY_DIFFICULTY=Сложность
