--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Kappalelista
 SING_SONG_IN_CAT=Laulu
 SING_SONGS_IN_CAT=Kappaletta
 PLAYLIST_CATTEXT=Kappalelista: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Legenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Duetto
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Pisteesi
 SING_MODE=Soololaulu
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Jokeri
 
 SONG_MENU_NAME_PARTY_JOKER=Ota jokeri
 
-SONG_JUMPTO_DESC=Etsi kappaletta
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Legenda
+SONG_MENU_LEGEND_VIDEO=Video
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Duetto
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Tiimit
 PARTY_DIFFICULTY=Vaikeustaso
