--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Λίστα
 SING_SONG_IN_CAT=Τραγούδι
 SING_SONGS_IN_CAT=Τραγούδια
 PLAYLIST_CATTEXT=Λίστα: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Θρύλος
-SING_SONG_SELECTION_LEGEND_VIDEO=βίντεο
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Ντουέτο
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Σύνολο
 SING_MODE=Τραγούδα σόλο
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Μπαλαντέρ
 
 SONG_MENU_NAME_PARTY_JOKER=Επιλογή μπαλαντέρ
 
-SONG_JUMPTO_DESC=Ψάξε τραγούδι
-SONG_JUMPTO_TYPE_DESC=Что ты хочешь спеть сейчас?
+SONG_MENU_LEGEND_TITLE=Θρύλος
+SONG_MENU_LEGEND_VIDEO=βίντεο
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Ντουέτο
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+SONG_SEARCH_DESC=Что ты хочешь спеть сейчас?
 
 PARTY_MODE=Είδος παιχνιδιού "Πάρτυ"
 PARTY_DIFFICULTY=Δυσκολία
