--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=播放列表
 ;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=歌曲
 PLAYLIST_CATTEXT=播放列表： %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=全部
 SING_MODE=独唱
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=王牌
 
 SONG_MENU_NAME_PARTY_JOKER=使用王牌
 
-SONG_JUMPTO_DESC=搜索歌曲
-SONG_JUMPTO_TYPE_DESC=你现在想唱什么？
+;TODO: SONG_MENU_LEGEND_TITLE=Legend
+;TODO: SONG_MENU_LEGEND_VIDEO=Video
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+;TODO: SONG_MENU_LEGEND_DUET=Duet
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+SONG_SEARCH_DESC=你现在想唱什么？
 
 PARTY_MODE=派对模式
 PARTY_DIFFICULTY=难度
