--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=LLista
 SING_SONG_IN_CAT=Cançon
 SING_SONGS_IN_CAT=Cançons
 PLAYLIST_CATTEXT=Playlist: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Llegenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Vídeo
-SING_SONG_SELECTION_LEGEND_MEDLEY=Versió curta
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Versió curta calculada
-SING_SONG_SELECTION_LEGEND_DUET=Duo
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Cantar sol
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Comodí
 
 SONG_MENU_NAME_PARTY_JOKER=Utilitzar comodí
 
-SONG_JUMPTO_DESC=Buscar cançó
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=LLegenda
+SONG_MENU_LEGEND_VIDEO=Vídeo
+SONG_MENU_LEGEND_MEDLEY=Versió curta
+SONG_MENU_LEGEND_MEDLEYC=Versió curta calculada
+SONG_MENU_LEGEND_DUET=Duo
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Mode festa
 PARTY_DIFFICULTY=Dificultat
