--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Grojaraštis
 SING_SONG_IN_CAT=Daina
 SING_SONGS_IN_CAT=Dainos
 PLAYLIST_CATTEXT=Grojaraštis: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Legenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Vaizdo įrašas
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Duetas
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Iš viso
 SING_MODE=Dainuoti solo
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Joker
 
 SONG_MENU_NAME_PARTY_JOKER=Paimk jokerį
 
-SONG_JUMPTO_DESC=Ieškoti dainos
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Legenda
+SONG_MENU_LEGEND_VIDEO=Vaizdo įrašas
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Duetas
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 ;TODO: PARTY_MODE=Party mode
 ;TODO: PARTY_DIFFICULTY=Difficulty
