--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONG_IN_CAT=Lidd
 SING_SONGS_IN_CAT=Lidder
 PLAYLIST_CATTEXT=Playlist: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Am Ganzen
 SING_MODE=Sangmodus
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Joker
 
 SONG_MENU_NAME_PARTY_JOKER=Joker asetzen
 
-SONG_JUMPTO_DESC=Sichen no
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+;TODO: SONG_MENU_LEGEND_TITLE=Legend
+SONG_MENU_LEGEND_VIDEO=Video
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+;TODO: SONG_MENU_LEGEND_DUET=Duet
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Partymodus
 PARTY_DIFFICULTY=Schwieregkeet
