--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Playlista
 SING_SONG_IN_CAT=Piosenka
 SING_SONGS_IN_CAT=Piosenki
 PLAYLIST_CATTEXT=Playlista: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Legenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Wideo
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Duet
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Cały
 SING_MODE=Śpiewaj solo
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Joker
 
 SONG_MENU_NAME_PARTY_JOKER=Weź jokera
 
-SONG_JUMPTO_DESC=Szukaj
-SONG_JUMPTO_TYPE_DESC=Co chcesz teraz zaśpiewać?
+SONG_MENU_LEGEND_TITLE=Legenda
+SONG_MENU_LEGEND_VIDEO=Wideo
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Duet
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+SONG_SEARCH_DESC=Co chcesz teraz zaśpiewać?
 
 PARTY_MODE=Tryb imprezy
 PARTY_DIFFICULTY=Poziom
