--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONG_IN_CAT=Pieseň
 SING_SONGS_IN_CAT=Skladba
 PLAYLIST_CATTEXT=Playlist: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Legenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Video
-SING_SONG_SELECTION_LEGEND_MEDLEY=Všehochuť
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Všehochuť (vypočítaná)
-SING_SONG_SELECTION_LEGEND_DUET=Duet
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Celkovo
 SING_MODE=Spievať sólo
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Žolík
 
 SONG_MENU_NAME_PARTY_JOKER=Použiť žolíka
 
-SONG_JUMPTO_DESC=Hľadať skladbu
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Legenda
+SONG_MENU_LEGEND_VIDEO=Video
+SONG_MENU_LEGEND_MEDLEY=Všehochuť
+SONG_MENU_LEGEND_MEDLEYC=Všehochuť (vypočítaná)
+SONG_MENU_LEGEND_DUET=Duet
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Párty mód
 PARTY_DIFFICULTY=Obtiažnosť
