--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Seznam predvajanja
 SING_SONG_IN_CAT=Pesem
 SING_SONGS_IN_CAT=Pesmi
 PLAYLIST_CATTEXT=Lista: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Legenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Duet
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Skupaj
 SING_MODE=Petje
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Joker
 
 SONG_MENU_NAME_PARTY_JOKER=Izkoristi jokerja
 
-SONG_JUMPTO_DESC=Poišci pesem
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Legenda
+SONG_MENU_LEGEND_VIDEO=Video
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Duet
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Zabava
 PARTY_DIFFICULTY=Težavnost
