--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Seznam stop
 SING_SONG_IN_CAT=Cançon
 SING_SONGS_IN_CAT=Skladby
 PLAYLIST_CATTEXT=Seznam stop: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Legenda
-SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Duet
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Celkem
 SING_MODE=Zpívat sólo
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Žolík
 
 SONG_MENU_NAME_PARTY_JOKER=Vzít žolíka
 
-SONG_JUMPTO_DESC=Hledat skladbu
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Legenda
+SONG_MENU_LEGEND_VIDEO=Video
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Duet
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Párty mód
 PARTY_DIFFICULTY=Obtížnost
