--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=Lista pesama
 SING_SONG_IN_CAT=Сонг
 SING_SONGS_IN_CAT=Песме
 PLAYLIST_CATTEXT=Playlist: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Легенда
-SING_SONG_SELECTION_LEGEND_VIDEO=Видео
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-SING_SONG_SELECTION_LEGEND_DUET=Дует
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=pevaj solo
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=Dzoker
 
 SONG_MENU_NAME_PARTY_JOKER=Uzmi dzokera
 
-SONG_JUMPTO_DESC=Trazi pesmu
-;TODO: SONG_JUMPTO_TYPE_DESC=What do you want to sing now?
+SONG_MENU_LEGEND_TITLE=Легенда
+SONG_MENU_LEGEND_VIDEO=Видео
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_DUET=Дует
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Timski mod
 PARTY_DIFFICULTY=Tezina
