--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -304,15 +304,6 @@ SING_SONG_SELECTION_PLAYLIST=曲順
 ;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=曲
 PLAYLIST_CATTEXT=曲順: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
-;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
-;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
-;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
-;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=全部
 SING_MODE=一人で歌う
@@ -384,8 +375,17 @@ SONG_MENU_JOKER=ジョーカー
 
 SONG_MENU_NAME_PARTY_JOKER=ジョーカーを使う
 
-SONG_JUMPTO_DESC=曲検索
-SONG_JUMPTO_TYPE_DESC=今、何を歌いたいのか？
+;TODO: SONG_MENU_LEGEND_TITLE=Legend
+;TODO: SONG_MENU_LEGEND_VIDEO=Video
+;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
+;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+;TODO: SONG_MENU_LEGEND_DUET=Duet
+;TODO: SONG_MENU_LEGEND_RAP=Rap
+;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
+;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
+;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+SONG_SEARCH_DESC=今、何を歌いたいのか？
 
 PARTY_MODE=パーティー・モード
 PARTY_DIFFICULTY=面倒
