new top scores in song selection

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -576,6 +576,8 @@ SONG_MENU_DELETE_SONG=Esborrar Cançó
 NAME_PLAYERS_COUNT=Nombre de jugadors
 NAME_CURRENT_PLAYER=Jugador
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=Quant a...
