--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -576,6 +576,8 @@ WEBSITE_NOT_EXIST_SONG=Dieser Song ist keiner Webseite zugeordnet!
 NAME_PLAYERS_COUNT=Anzahl der Spieler
 NAME_CURRENT_PLAYER=Spieler
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 JUKEBOX_MODE=Jukebox Modus
 
 ABOUT_MAIN=Über...
