--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -576,6 +576,8 @@ WEBSITE_NOT_EXIST_SONG=La canción no pertenece a ningún sitio
 NAME_PLAYERS_COUNT=Número de jugadores
 NAME_CURRENT_PLAYER=Jugador
 
+SING_SONGS_MYSCORES=Mis puntuaciones
+
 JUKEBOX_MODE=Modo reproductor
 
 ABOUT_MAIN=Acerca de...
