--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -576,6 +576,8 @@ WEBSITE_NOT_EXIST_SONG=La chanson n'appartient à aucun site !
 NAME_PLAYERS_COUNT=Nombre de joueurs
 NAME_CURRENT_PLAYER=Joueur
 
+SING_SONGS_MYSCORES=Mes scores
+
 JUKEBOX_MODE=Mode Jukebox
 
 ABOUT_MAIN=À propos...
