--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -576,6 +576,8 @@ WEBSITE_NOT_EXIST_SONG=Chan eil an t-òran a’ buntainn ri làrach-lìn sam bit
 NAME_PLAYERS_COUNT=Co mheud cluicheadair
 NAME_CURRENT_PLAYER=Cluicheadair
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 JUKEBOX_MODE=Modh an inneil-chlàr
 
 ABOUT_MAIN=Mu dhèidhinn…
