--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -576,6 +576,8 @@ SONG_MENU_DELETE_SONG=Izbriši Pjesmu
 NAME_PLAYERS_COUNT=Broj igrača
 NAME_CURRENT_PLAYER=Igrač
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=Oko...
