--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -576,6 +576,8 @@ WEBSITE_NOT_EXIST_SONG=La canzone non appartiene a nessun sito web!
 NAME_PLAYERS_COUNT=Numero di giocatori
 NAME_CURRENT_PLAYER=Giocatore
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 JUKEBOX_MODE=Modalità Jukebox
 
 ABOUT_MAIN=Sul gioco
