--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -576,6 +576,8 @@ WEBSITE_NOT_EXIST_SONG=A dal nem tartozik egyik weboldalhoz sem!
 NAME_PLAYERS_COUNT=Játékosok száma
 NAME_CURRENT_PLAYER=Játékos
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 JUKEBOX_MODE=Zenedoboz Mód
 
 ABOUT_MAIN=Rólunk...
