--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -576,6 +576,8 @@ SONG_MENU_START_5_MEDLEY=Zingen %0:d lied!
 NAME_PLAYERS_COUNT=Aantal spelers
 NAME_CURRENT_PLAYER=Speler
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=Over...
