--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -576,6 +576,8 @@ SONG_MENU_DELETE_SONG=Ta bort sang
 NAME_PLAYERS_COUNT=Antall spillere
 NAME_CURRENT_PLAYER=Spiller
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=Handle om...
