--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -576,6 +576,8 @@ WEBSITE_NOT_EXIST_SONG=Ta piosenka nie należy do żadnej strony internetowej!
 NAME_PLAYERS_COUNT=Liczba graczy
 NAME_CURRENT_PLAYER=Gracz
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 JUKEBOX_MODE=Tryb szafy grającej
 
 ABOUT_MAIN=Informacje...
