--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -576,6 +576,8 @@ WEBSITE_NOT_EXIST_SONG=A canção não pertence a nenhum website!
 NAME_PLAYERS_COUNT=Nº de Jogadores
 NAME_CURRENT_PLAYER=Jogador
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 JUKEBOX_MODE=Modo Jukebox
 
 ABOUT_MAIN=Sobre...
