--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -576,6 +576,8 @@ SONG_MENU_DELETE_SONG=Удалить песню
 NAME_PLAYERS_COUNT=Количество игроков
 NAME_CURRENT_PLAYER=игрок
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=Около...
