--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -576,6 +576,8 @@ STAT_FORMAT_BANDS=%0:s \n %1:dx cântat
 NAME_PLAYERS_COUNT=Număr de jucători
 NAME_CURRENT_PLAYER=Jucător
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=Despre...
