--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -576,6 +576,8 @@ SONG_MENU_SORTING_APPLY=Použiť
 NAME_PLAYERS_COUNT=Počet hráčov
 NAME_CURRENT_PLAYER=Hráč
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=O...
