--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -576,6 +576,8 @@ SONG_MENU_DELETE_SONG=Poista kappale
 NAME_PLAYERS_COUNT=Pelaajien määrä
 NAME_CURRENT_PLAYER=Pelaaja
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ;TODO: ABOUT_MAIN=About...
