--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -576,6 +576,8 @@ SONG_MENU_DELETE_SONG=Ta bort låt
 NAME_PLAYERS_COUNT=Antal spelare
 NAME_CURRENT_PLAYER=Spelare
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=Handla om...
