--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -576,6 +576,8 @@ SONG_MENU_DELETE_SONG=Eyða lagi
 NAME_PLAYERS_COUNT=Fjöldi leikmanna
 NAME_CURRENT_PLAYER=Leikmaður
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=Um...
