--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -576,6 +576,8 @@ SONG_MENU_DELETE_SONG=Obrisi Pesmu
 NAME_PLAYERS_COUNT=Број играча
 NAME_CURRENT_PLAYER=Играч
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=О томе...
