--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -573,6 +573,8 @@ SONG_MENU_NAME_JUKEBOX=Menu Jukebox
 WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
+SING_SONGS_MYSCORES=My scores
+
 NAME_PLAYERS_COUNT=Number of Players
 NAME_CURRENT_PLAYER=Player
 
