--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -576,6 +576,8 @@ SONG_MENU_SORTING_APPLY=Aplicar
 NAME_PLAYERS_COUNT=Nº de xogadores
 NAME_CURRENT_PLAYER=Xogador
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ABOUT_MAIN=Acerca de...
