--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -576,6 +576,8 @@ SONG_MENU_SONG=Daina
 NAME_PLAYERS_COUNT=Žaidėjų skaičius
 NAME_CURRENT_PLAYER=Žaidėjas
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 JUKEBOX_MODE=Jukebox režimas
 
 ABOUT_MAIN=Apie...
