--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -576,6 +576,8 @@ SONG_MENU_DELETE_SONG=Odebrat skladbu
 ;TODO: NAME_PLAYERS_COUNT=Number of Players
 ;TODO: NAME_CURRENT_PLAYER=Player
 
+;TODO: SING_SONGS_MYSCORES=My scores
+
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 
 ;TODO: ABOUT_MAIN=About...
