updates in project name

--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -161,7 +161,7 @@ SING_OPTIONS_NETWORK_AUTO_PLAYER=Jogador
 SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Pontuação (Fácil)
 SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Pontuação (Médio)
 SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Pontuação (Difícil)
-SING_OPTIONS_NETWORK_NO_DLL=Não existem Web Dll's compatíveis com o Ultrastar Deluxe...
+SING_OPTIONS_NETWORK_NO_DLL=Não existem Web Dll's compatíveis com o Ultrastar WorldParty...
 SING_OPTIONS_NETWORK_DELETE_PLAYER=Deseja mesmo eliminar o utilizador %0:s do website %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Inserir
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Apagar
