--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -161,7 +161,7 @@ SING_OPTIONS_NETWORK_AUTO_PLAYER=Xogador
 SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Puntuación (Fácil)
 SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Puntuación (Medio)
 SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Puntuación (Difícil)
-SING_OPTIONS_NETWORK_NO_DLL=Non hai DLL's Web compatibles con Ultrastar Deluxe...
+SING_OPTIONS_NETWORK_NO_DLL=Non hai DLL's Web compatibles con UltraStar WorldParty...
 SING_OPTIONS_NETWORK_DELETE_PLAYER=De verdad queres suprimir o usuario %0:s da web de %1:s?
 SING_OPTIONS_NETWORK_LEGEND_INSERT=Engadir
 SING_OPTIONS_NETWORK_LEGEND_DELETE=Suprimir
